# CryptoPulse

./: .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: crypto.db  database.py  exceptions.py  main.py
app/api/: dependencies.py
app/api/routes/: auth.py  crypto.py  subscriptions.py
app/core/: redis.py  security.py  settings.py
app/models/: subscription.py  user.py
app/schemas/: crypto.py  subscription.py  user.py
app/services/: background_tasks.py  crypto_service.py  subscription.py  user.py
docker/: docker-compose.test.yml
tests/: conftest.py  test_auth.py  test_crypto.py
